# sgrep

./: Makefile.am  Makefile.in  acconfig.h  aclocal.m4  common.c  config.h.in  configure  configure.in  eval.c  index.c  index_main.c  main.c  optimize.c  output.c  parser.c  pmatch.c  preproc.c  sgml.c  sgrep.h  sgrep.lsm  sysdeps.c  sysdeps.h
